--- a/project/.env
+++ b/project/.env
@@ -6,6 +6,6 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 DATABASE=postgres
 
-DEBUG=1
+DEBUG=True
 SECRET_KEY=django-insecure-$c9%y9smw9y&%pt$*m!k5!+3ko&!x-rszaopz20n=1hg@xsq!3
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
